--- a/DungeonCrawler/Assembly-CSharp.csproj
+++ b/DungeonCrawler/Assembly-CSharp.csproj
@@ -57,10 +57,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\DungeonGenerator\DoorTeleporter.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerMovement2D.cs" />
+    <Compile Include="Assets\Scripts\WorldElements\Platform.cs" />
     <Compile Include="Assets\Scripts\DungeonGenerator\RoomPrefabManager.cs" />
     <Compile Include="Assets\Scripts\DungeonGenerator\DungeonManager.cs" />
+    <Compile Include="Assets\Scripts\Player\DebugPlayer.cs" />
     <Compile Include="Assets\Scripts\DungeonGenerator\DungeonRoom.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerMovement2D.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -284,6 +286,9 @@
     </Reference>
     <Reference Include="UnityEditor.UnityConnectModule">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.2.1f1\Editor\Data\Managed\UnityEngine\UnityEditor.UnityConnectModule.dll</HintPath>
+    </Reference>
+    <Reference Include="DOTween">
+      <HintPath>Assets\Plugins\Demigiant\DOTween\DOTween.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.2.1f1\Editor\Data\NetStandard\ref\2.0.0\netstandard.dll</HintPath>
@@ -632,6 +637,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
+      <Project>{CDAB084D-3AC6-1E88-7222-046D8E236985}</Project>
+      <Name>Assembly-CSharp-firstpass</Name>
+    </ProjectReference>
     <ProjectReference Include="Unity.2D.Animation.Editor.csproj">
       <Project>{3048C6BE-7F7E-40FA-D59F-FD9C923290C2}</Project>
       <Name>Unity.2D.Animation.Editor</Name>
