--- a/DungeonCrawler/Assembly-CSharp.csproj
+++ b/DungeonCrawler/Assembly-CSharp.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -47,7 +47,7 @@
   <PropertyGroup>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UnityProjectGenerator>Package</UnityProjectGenerator>
-    <UnityProjectGeneratorVersion>2.0.5</UnityProjectGeneratorVersion>
+    <UnityProjectGeneratorVersion>2.0.7</UnityProjectGeneratorVersion>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>2020.2.1f1</UnityVersion>
@@ -57,38 +57,52 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\DungeonGenerator\DoorTeleporter.cs" />
+    <Compile Include="Assets\Scripts\WorldElements\HoverObject.cs" />
+    <Compile Include="Assets\Scripts\DungeonGenerator\DungeonRoomAStarClass.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerAttributes.cs" />
+    <Compile Include="Assets\DOTS_Pathfinding\Scripts\Pathfinding.cs" />
     <Compile Include="Assets\Scripts\Player\Weapon.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMovement2D.cs" />
-    <Compile Include="Assets\Scripts\DungeonGenerator\CameraRepositioner.cs" />
+    <Compile Include="Assets\Scripts\DungeonGenerator\ID.cs" />
+    <Compile Include="Assets\Scripts\Enemy\EnemyBehaviour.cs" />
     <Compile Include="Assets\Scripts\Player\WeaponController.cs" />
     <Compile Include="Assets\Scripts\WorldElements\Platform.cs" />
     <Compile Include="Assets\Scripts\Player\ExplosionFlash.cs" />
     <Compile Include="Assets\Scripts\DungeonGenerator\RoomPrefabManager.cs" />
     <Compile Include="Assets\Scripts\DungeonGenerator\DungeonManager.cs" />
     <Compile Include="Assets\Scripts\DungeonGenerator\DungeonRoom.cs" />
-    <Compile Include="Assets\Scripts\WorldElements\HoverObject.cs" />
+    <Compile Include="Assets\Scripts\Enemy\EnemyMelee.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+     <None Include="Assets\Audio\Music\BoscaCeoil\Adobe AIR\Versions\1.0\Resources\WebKit.dll" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
+     <None Include="Assets\Audio\Music\BoscaCeoil\META-INF\signatures.xml" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+     <None Include="Assets\Audio\Music\BoscaCeoil\META-INF\AIR\application.xml" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+     <None Include="Assets\Audio\Music\BoscaCeoil\Adobe AIR\Versions\1.0\Adobe AIR.dll" />
+     <None Include="Assets\Audio\Music\BoscaCeoil\Adobe AIR\Versions\1.0\Resources\AdobeCP.dll" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
      <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
      <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
-     <None Include="Assets\Imported Assets\Medieval_pixel_art_asset_FREE\pixel_snapping_README.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
      <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
+     <None Include="Assets\Audio\Music\BoscaCeoil\Adobe AIR\Versions\1.0\Resources\AdobeCP15.dll" />
+     <None Include="Assets\Audio\Music\BoscaCeoil\Adobe AIR\Versions\1.0\Resources\WebKit\LGPL License.txt" />
+     <None Include="Assets\Audio\Music\BoscaCeoil\Adobe AIR\Versions\1.0\Resources\NPSWF32.dll" />
      <None Include="Assets\Audio\SFX\SFXGenerator\readme.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
+     <None Include="Assets\Audio\Music\BoscaCeoil\Adobe AIR\Versions\1.0\Resources\WebKit\Notice WebKit.txt" />
+     <None Include="Assets\Audio\Music\boscaceoil_license.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
+     <None Include="Assets\Audio\SFX\sfxr_license.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
      <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
@@ -315,8 +329,17 @@
     <Reference Include="UnityEditor.UnityConnectModule">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.2.1f1\Editor\Data\Managed\UnityEngine\UnityEditor.UnityConnectModule.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Collections.LowLevel.ILSupport">
+      <HintPath>Library\PackageCache\com.unity.collections@0.15.0-preview.21\Unity.Collections.LowLevel.ILSupport\Unity.Collections.LowLevel.ILSupport.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Burst.Unsafe">
+      <HintPath>Library\PackageCache\com.unity.burst@1.4.6\Unity.Burst.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="DOTween">
       <HintPath>Assets\Plugins\Demigiant\DOTween\DOTween.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json@2.0.0-preview\Runtime\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.2.1f1\Editor\Data\MonoBleedingEdge\lib\mono\4.7.1-api\mscorlib.dll</HintPath>
@@ -669,10 +692,6 @@
       <Project>{CDAB084D-3AC6-1E88-7222-046D8E236985}</Project>
       <Name>Assembly-CSharp-firstpass</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.2D.Animation.Editor.csproj">
-      <Project>{3048C6BE-7F7E-40FA-D59F-FD9C923290C2}</Project>
-      <Name>Unity.2D.Animation.Editor</Name>
-    </ProjectReference>
     <ProjectReference Include="Unity.InternalAPIEngineBridge.001.csproj">
       <Project>{15AA472E-4815-62DC-EC84-6F6DDAAF4A84}</Project>
       <Name>Unity.InternalAPIEngineBridge.001</Name>
@@ -685,33 +704,13 @@
       <Project>{B30040D5-9B5A-ABD3-79F0-7E3E912731BD}</Project>
       <Name>Unity.RenderPipelines.Universal.Shaders</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.RenderPipelines.Universal.Runtime.csproj">
-      <Project>{0F587014-D94C-137F-D4AE-58EA15057583}</Project>
-      <Name>Unity.RenderPipelines.Universal.Runtime</Name>
-    </ProjectReference>
     <ProjectReference Include="PsdPlugin.csproj">
       <Project>{3DFE886A-6F2F-2F2F-5F7E-F9CE48A96AB5}</Project>
       <Name>PsdPlugin</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.2D.Tilemap.Editor.csproj">
-      <Project>{73D95415-ED37-1E8D-55EB-376968256743}</Project>
-      <Name>Unity.2D.Tilemap.Editor</Name>
-    </ProjectReference>
     <ProjectReference Include="Unity.TextMeshPro.Editor.csproj">
       <Project>{1E82A373-5504-B2E2-E810-E49F9E14B47A}</Project>
       <Name>Unity.TextMeshPro.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.VisualStudio.Editor.csproj">
-      <Project>{77AC2651-5CF1-0975-49E7-A7DA9541D958}</Project>
-      <Name>Unity.VisualStudio.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Timeline.csproj">
-      <Project>{DD75A747-003B-51B8-419D-1D4FF6C221F2}</Project>
-      <Name>Unity.Timeline</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.TextMeshPro.csproj">
-      <Project>{F9FBC5E1-2A0B-9087-1068-6D2A843E56D2}</Project>
-      <Name>Unity.TextMeshPro</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.Searcher.Editor.csproj">
       <Project>{B0E36713-DA31-0E81-C599-B9201BDD8059}</Project>
@@ -721,21 +720,9 @@
       <Project>{99756267-0003-1DB5-6DDF-EEC948AA26FA}</Project>
       <Name>Unity.2D.IK.Editor</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.2D.Sprite.Editor.csproj">
-      <Project>{3600D90C-DFBF-0EC7-E0D5-F4D136F4AFBA}</Project>
-      <Name>Unity.2D.Sprite.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.Psdimporter.Editor.csproj">
-      <Project>{24D50BC0-F445-75AC-42F6-6922834D1299}</Project>
-      <Name>Unity.2D.Psdimporter.Editor</Name>
-    </ProjectReference>
     <ProjectReference Include="Unity.2D.Path.Editor.csproj">
       <Project>{9BC7E115-42B0-2EE8-9B21-9DA42541DFE2}</Project>
       <Name>Unity.2D.Path.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Postprocessing.Editor.csproj">
-      <Project>{82A81C19-B2B1-C77F-104C-3EC6831C9F9D}</Project>
-      <Name>Unity.Postprocessing.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="UnityEditor.UI.csproj">
       <Project>{92A54EB6-96DA-3565-84B1-9A5154D6B8D3}</Project>
@@ -753,18 +740,6 @@
       <Project>{2A37DFA9-E617-EE69-F593-D3701C2E7448}</Project>
       <Name>UnityEngine.UI</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.RenderPipelines.Core.Runtime.csproj">
-      <Project>{F20E3D8D-6586-4F64-DB98-F4B482601C37}</Project>
-      <Name>Unity.RenderPipelines.Core.Runtime</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.InternalAPIEditorBridge.001.csproj">
-      <Project>{C0AB57BA-1F99-ACB3-A117-C74625175E22}</Project>
-      <Name>Unity.InternalAPIEditorBridge.001</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Mathematics.csproj">
-      <Project>{BD0BB27C-FD4E-ED76-E160-DB08936AA06D}</Project>
-      <Name>Unity.Mathematics</Name>
-    </ProjectReference>
     <ProjectReference Include="Unity.2D.IK.Runtime.csproj">
       <Project>{BB859850-4D1C-664C-D742-6546CA9FEED7}</Project>
       <Name>Unity.2D.IK.Runtime</Name>
@@ -781,6 +756,70 @@
       <Project>{E9F2493F-BE79-D706-AA85-C86ED4B2787D}</Project>
       <Name>com.unity.cinemachine.editor</Name>
     </ProjectReference>
+    <ProjectReference Include="Unity.2D.Animation.Triangle.Runtime.csproj">
+      <Project>{8669FE62-37AB-C55C-275F-039C778ABFBC}</Project>
+      <Name>Unity.2D.Animation.Triangle.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.RenderPipeline.Universal.ShaderLibrary.csproj">
+      <Project>{9BD942E9-6ED9-C29B-B188-9E45EDC27E66}</Project>
+      <Name>Unity.RenderPipeline.Universal.ShaderLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Mathematics.Editor.csproj">
+      <Project>{5DB2C7D7-A9EF-8609-CDF1-687AD4574555}</Project>
+      <Name>Unity.Mathematics.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Common.Editor.csproj">
+      <Project>{4BB6B765-6622-4CB8-4AB5-72FAAA222DB4}</Project>
+      <Name>Unity.2D.Common.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Animation.Editor.csproj">
+      <Project>{3048C6BE-7F7E-40FA-D59F-FD9C923290C2}</Project>
+      <Name>Unity.2D.Animation.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Tilemap.Editor.csproj">
+      <Project>{73D95415-ED37-1E8D-55EB-376968256743}</Project>
+      <Name>Unity.2D.Tilemap.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.RenderPipelines.Universal.Runtime.csproj">
+      <Project>{0F587014-D94C-137F-D4AE-58EA15057583}</Project>
+      <Name>Unity.RenderPipelines.Universal.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.VisualStudio.Editor.csproj">
+      <Project>{77AC2651-5CF1-0975-49E7-A7DA9541D958}</Project>
+      <Name>Unity.VisualStudio.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Timeline.csproj">
+      <Project>{DD75A747-003B-51B8-419D-1D4FF6C221F2}</Project>
+      <Name>Unity.Timeline</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.TextMeshPro.csproj">
+      <Project>{F9FBC5E1-2A0B-9087-1068-6D2A843E56D2}</Project>
+      <Name>Unity.TextMeshPro</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Sprite.Editor.csproj">
+      <Project>{3600D90C-DFBF-0EC7-E0D5-F4D136F4AFBA}</Project>
+      <Name>Unity.2D.Sprite.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Psdimporter.Editor.csproj">
+      <Project>{24D50BC0-F445-75AC-42F6-6922834D1299}</Project>
+      <Name>Unity.2D.Psdimporter.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.InternalAPIEditorBridge.001.csproj">
+      <Project>{C0AB57BA-1F99-ACB3-A117-C74625175E22}</Project>
+      <Name>Unity.InternalAPIEditorBridge.001</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.RenderPipelines.Core.Runtime.csproj">
+      <Project>{F20E3D8D-6586-4F64-DB98-F4B482601C37}</Project>
+      <Name>Unity.RenderPipelines.Core.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Postprocessing.Editor.csproj">
+      <Project>{82A81C19-B2B1-C77F-104C-3EC6831C9F9D}</Project>
+      <Name>Unity.Postprocessing.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Mathematics.csproj">
+      <Project>{BD0BB27C-FD4E-ED76-E160-DB08936AA06D}</Project>
+      <Name>Unity.Mathematics</Name>
+    </ProjectReference>
     <ProjectReference Include="Unity.Postprocessing.Runtime.csproj">
       <Project>{DADFA029-E07D-33B2-EA2D-612EDE98AFD9}</Project>
       <Name>Unity.Postprocessing.Runtime</Name>
@@ -788,10 +827,6 @@
     <ProjectReference Include="Unity.RenderPipelines.Universal.Editor.csproj">
       <Project>{40E747CB-8190-9B70-11D2-91B4B0C63ADA}</Project>
       <Name>Unity.RenderPipelines.Universal.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.2D.Animation.Triangle.Runtime.csproj">
-      <Project>{8669FE62-37AB-C55C-275F-039C778ABFBC}</Project>
-      <Name>Unity.2D.Animation.Triangle.Runtime</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Animation.Runtime.csproj">
       <Project>{80DF5AB3-1926-F529-2686-909F093DA3AD}</Project>
@@ -801,21 +836,13 @@
       <Project>{02D7A651-9690-6730-2A54-515EB2B11220}</Project>
       <Name>Unity.2D.PixelPerfect.Editor</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.RenderPipeline.Universal.ShaderLibrary.csproj">
-      <Project>{9BD942E9-6ED9-C29B-B188-9E45EDC27E66}</Project>
-      <Name>Unity.RenderPipeline.Universal.ShaderLibrary</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.csproj">
-      <Project>{812E338B-F15D-D346-8B29-5B4D83E7FA5C}</Project>
-      <Name>Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary</Name>
-    </ProjectReference>
     <ProjectReference Include="Unity.Timeline.Editor.csproj">
       <Project>{613814C1-EE0C-1361-00D4-64844B19C646}</Project>
       <Name>Unity.Timeline.Editor</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.Mathematics.Editor.csproj">
-      <Project>{5DB2C7D7-A9EF-8609-CDF1-687AD4574555}</Project>
-      <Name>Unity.Mathematics.Editor</Name>
+    <ProjectReference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.csproj">
+      <Project>{812E338B-F15D-D346-8B29-5B4D83E7FA5C}</Project>
+      <Name>Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Common.Runtime.csproj">
       <Project>{4F5AEABF-30E4-B4C5-C217-777B67070257}</Project>
@@ -825,10 +852,6 @@
       <Project>{10940856-9771-D5B7-5610-C761E9F6F72A}</Project>
       <Name>Unity.2D.SpriteShape.Editor</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.2D.Common.Editor.csproj">
-      <Project>{4BB6B765-6622-4CB8-4AB5-72FAAA222DB4}</Project>
-      <Name>Unity.2D.Common.Editor</Name>
-    </ProjectReference>
     <ProjectReference Include="Unity.RenderPipelines.Core.Editor.csproj">
       <Project>{111411F2-2962-6197-0D57-EF90CF309042}</Project>
       <Name>Unity.RenderPipelines.Core.Editor</Name>
@@ -836,6 +859,26 @@
     <ProjectReference Include="Unity.2D.SpriteShape.Runtime.csproj">
       <Project>{BD82C5C0-6C9F-927B-663B-45A75F093C60}</Project>
       <Name>Unity.2D.SpriteShape.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Burst.Editor.csproj">
+      <Project>{7763BFA5-2661-0A78-EAC2-2AD3DAC7CBD9}</Project>
+      <Name>Unity.Burst.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Burst.csproj">
+      <Project>{1BB0891B-378F-0668-2EFD-98CAA2136F4A}</Project>
+      <Name>Unity.Burst</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Collections.csproj">
+      <Project>{C815C991-3428-5890-B579-F80631E3859A}</Project>
+      <Name>Unity.Collections</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Jobs.Editor.csproj">
+      <Project>{ACD733A5-A66E-100E-A6A7-32B2C483DC3C}</Project>
+      <Name>Unity.Jobs.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Jobs.csproj">
+      <Project>{9F9C774B-4B2F-869F-152C-CA1BBB3FE4C0}</Project>
+      <Name>Unity.Jobs</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
