--- a/DungeonCrawler/Unity.2D.IK.Runtime.csproj
+++ b/DungeonCrawler/Unity.2D.IK.Runtime.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -47,7 +47,7 @@
   <PropertyGroup>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UnityProjectGenerator>Package</UnityProjectGenerator>
-    <UnityProjectGeneratorVersion>2.0.5</UnityProjectGeneratorVersion>
+    <UnityProjectGeneratorVersion>2.0.7</UnityProjectGeneratorVersion>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>2020.2.1f1</UnityVersion>
@@ -56,23 +56,23 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\IKManager2D.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\LimbSolver2D.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\Solvers\FABRIK2D.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\IKUtility.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\IKEditorManagerHelper.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\CCDSolver2D.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\Solver2DMenuAttribute.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\Solver2D.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\IKManager2DEditorData.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\Solvers\CCD2D.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\IKChain2D.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\Solvers\Limb.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\AssemblyInfo.cs" />
-    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\FabrikSolver2D.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\IKManager2D.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\LimbSolver2D.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\Solvers\FABRIK2D.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\IKUtility.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\IKEditorManagerHelper.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\CCDSolver2D.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\Solver2DMenuAttribute.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\Solver2D.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\IKManager2DEditorData.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\Solvers\CCD2D.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\IKChain2D.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\Solvers\Limb.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\AssemblyInfo.cs" />
+    <Compile Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\FabrikSolver2D.cs" />
   </ItemGroup>
   <ItemGroup>
-     <None Include="Library\PackageCache\com.unity.2d.animation@5.0.3\IK\Runtime\Unity.2D.IK.Runtime.asmdef" />
+     <None Include="Library\PackageCache\com.unity.2d.animation@5.0.4\IK\Runtime\Unity.2D.IK.Runtime.asmdef" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.2.1f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
@@ -304,14 +304,23 @@
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Editor\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Collections.LowLevel.ILSupport">
+      <HintPath>Library\PackageCache\com.unity.collections@0.15.0-preview.21\Unity.Collections.LowLevel.ILSupport\Unity.Collections.LowLevel.ILSupport.dll</HintPath>
+    </Reference>
     <Reference Include="DOTweenEditor">
       <HintPath>Assets\Plugins\Demigiant\DOTween\Editor\DOTweenEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Burst.Unsafe">
+      <HintPath>Library\PackageCache\com.unity.burst@1.4.6\Unity.Burst.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="DOTween">
       <HintPath>Assets\Plugins\Demigiant\DOTween\DOTween.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.NRefactory">
       <HintPath>Library\PackageCache\com.unity.render-pipelines.core@10.2.2\Editor\ShaderGenerator\ICSharpCode.NRefactory.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json@2.0.0-preview\Runtime\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.2.1f1\Editor\Data\MonoBleedingEdge\lib\mono\4.7.1-api\mscorlib.dll</HintPath>
