Updated packages and added inspector extension plugins

--- a/DungeonCrawler/Unity.CollabProxy.Editor.csproj
+++ b/DungeonCrawler/Unity.CollabProxy.Editor.csproj
@@ -437,6 +437,9 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json@2.0.0-preview\Runtime\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="InspectorGadgets.Lite">
+      <HintPath>Assets\Plugins\Inspector Gadgets\Misc\Inspector Gadgets Lite\InspectorGadgets.Lite.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>Library\PackageCache\com.unity.ext.nunit@1.0.6\net35\unity-custom\nunit.framework.dll</HintPath>
     </Reference>
