--- a/DungeonCrawler/Assembly-CSharp.csproj
+++ b/DungeonCrawler/Assembly-CSharp.csproj
@@ -56,22 +56,64 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\DungeonGenerator\DoorTeleporter.cs" />
+    <Compile Include="Assets\Scripts\WorldElements\DoorTeleporter.cs" />
     <Compile Include="Assets\Scripts\WorldElements\HoverObject.cs" />
-    <Compile Include="Assets\Scripts\DungeonGenerator\DungeonRoomAStarClass.cs" />
+    <Compile Include="Assets\Scripts\PathFinding\DungeonRoomAStar.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerAttributes.cs" />
-    <Compile Include="Assets\DOTS_Pathfinding\Scripts\Pathfinding.cs" />
-    <Compile Include="Assets\Scripts\Player\Weapon.cs" />
+    <Compile Include="Assets\Scripts\CodeExtension\NativeBinaryHeap.cs" />
+    <Compile Include="Assets\Scripts\Weapon\Weapon.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMovement2D.cs" />
-    <Compile Include="Assets\Scripts\DungeonGenerator\ID.cs" />
+    <Compile Include="Assets\Scripts\PathFinding\AStarPathFinder.cs" />
+    <Compile Include="Assets\Scripts\CodeExtension\ID.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyBehaviour.cs" />
-    <Compile Include="Assets\Scripts\Player\WeaponController.cs" />
+    <Compile Include="Assets\Scripts\Weapon\WeaponController.cs" />
     <Compile Include="Assets\Scripts\WorldElements\Platform.cs" />
-    <Compile Include="Assets\Scripts\Player\ExplosionFlash.cs" />
+    <Compile Include="Assets\Scripts\Weapon\ExplosionFlash.cs" />
     <Compile Include="Assets\Scripts\DungeonGenerator\RoomPrefabManager.cs" />
+    <Compile Include="Assets\Scripts\DungeonGenerator\DungeonGrid.cs" />
     <Compile Include="Assets\Scripts\DungeonGenerator\DungeonManager.cs" />
+    <Compile Include="Assets\Scripts\PathFinding\AStarSearchCall.cs" />
     <Compile Include="Assets\Scripts\DungeonGenerator\DungeonRoom.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyMelee.cs" />
+    <Compile Include="Assets\Scripts\GameManager\DungeonValues.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Weapons\Weapons.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Other\CameraMovement.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Enemies\BigEnemy.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\UI\ScorePopup.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Players\Enemy.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Other\FloatingPlatform.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Weapons\Explosion.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Other\Garbage.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Players\Player.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Other\ShakeOnce.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Managers\EnemyController.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Managers\ScoreController.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Other\Flip.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Other\RemoveAfterTime.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Managers\MapGenerator.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Enemies\SuicideEnemy.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Other\SpawnEnemy.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Other\GameOverUI.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Enemies\FlyingEnemy.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Audio\Sound.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Weapons\Gun.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Enemies\Enemy1.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\UI\Menu.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Managers\HealthController.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Audio\AudioManager.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Other\CameraShake.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Weapons\Barrel.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Other\Game.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Players\Actor.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Enemies\SniperEnemy.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Other\JetPack.cs" />
+    <Compile Include="Assets\SourceCode\Scripts\Weapons\Bullet.cs" />
+    <Compile Include="Assets\Scripts\Entity\Actor.cs" />
+    <Compile Include="Assets\Scripts\GameManager\GameManager.cs" />
+    <Compile Include="Assets\Scripts\GameManager\MainMenuManager.cs" />
+    <Compile Include="Assets\Scripts\WorldElements\TriggerFunction.cs" />
+    <Compile Include="Assets\Scripts\WorldElements\ActivationZone.cs" />
+    <Compile Include="Assets\Scripts\GameManager\ScreenFade.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
@@ -340,6 +382,9 @@
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json@2.0.0-preview\Runtime\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="InspectorGadgets.Lite">
+      <HintPath>Assets\Plugins\Inspector Gadgets\Misc\Inspector Gadgets Lite\InspectorGadgets.Lite.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.2.1f1\Editor\Data\MonoBleedingEdge\lib\mono\4.7.1-api\mscorlib.dll</HintPath>
@@ -768,6 +813,10 @@
       <Project>{5DB2C7D7-A9EF-8609-CDF1-687AD4574555}</Project>
       <Name>Unity.Mathematics.Editor</Name>
     </ProjectReference>
+    <ProjectReference Include="Unity.Collections.csproj">
+      <Project>{C815C991-3428-5890-B579-F80631E3859A}</Project>
+      <Name>Unity.Collections</Name>
+    </ProjectReference>
     <ProjectReference Include="Unity.2D.Common.Editor.csproj">
       <Project>{4BB6B765-6622-4CB8-4AB5-72FAAA222DB4}</Project>
       <Name>Unity.2D.Common.Editor</Name>
@@ -796,6 +845,10 @@
       <Project>{F9FBC5E1-2A0B-9087-1068-6D2A843E56D2}</Project>
       <Name>Unity.TextMeshPro</Name>
     </ProjectReference>
+    <ProjectReference Include="Unity.Burst.Editor.csproj">
+      <Project>{7763BFA5-2661-0A78-EAC2-2AD3DAC7CBD9}</Project>
+      <Name>Unity.Burst.Editor</Name>
+    </ProjectReference>
     <ProjectReference Include="Unity.2D.Sprite.Editor.csproj">
       <Project>{3600D90C-DFBF-0EC7-E0D5-F4D136F4AFBA}</Project>
       <Name>Unity.2D.Sprite.Editor</Name>
@@ -816,9 +869,17 @@
       <Project>{82A81C19-B2B1-C77F-104C-3EC6831C9F9D}</Project>
       <Name>Unity.Postprocessing.Editor</Name>
     </ProjectReference>
+    <ProjectReference Include="Unity.Jobs.Editor.csproj">
+      <Project>{ACD733A5-A66E-100E-A6A7-32B2C483DC3C}</Project>
+      <Name>Unity.Jobs.Editor</Name>
+    </ProjectReference>
     <ProjectReference Include="Unity.Mathematics.csproj">
       <Project>{BD0BB27C-FD4E-ED76-E160-DB08936AA06D}</Project>
       <Name>Unity.Mathematics</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Burst.csproj">
+      <Project>{1BB0891B-378F-0668-2EFD-98CAA2136F4A}</Project>
+      <Name>Unity.Burst</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.Postprocessing.Runtime.csproj">
       <Project>{DADFA029-E07D-33B2-EA2D-612EDE98AFD9}</Project>
@@ -827,6 +888,10 @@
     <ProjectReference Include="Unity.RenderPipelines.Universal.Editor.csproj">
       <Project>{40E747CB-8190-9B70-11D2-91B4B0C63ADA}</Project>
       <Name>Unity.RenderPipelines.Universal.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Jobs.csproj">
+      <Project>{9F9C774B-4B2F-869F-152C-CA1BBB3FE4C0}</Project>
+      <Name>Unity.Jobs</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Animation.Runtime.csproj">
       <Project>{80DF5AB3-1926-F529-2686-909F093DA3AD}</Project>
@@ -860,25 +925,9 @@
       <Project>{BD82C5C0-6C9F-927B-663B-45A75F093C60}</Project>
       <Name>Unity.2D.SpriteShape.Runtime</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.Burst.Editor.csproj">
-      <Project>{7763BFA5-2661-0A78-EAC2-2AD3DAC7CBD9}</Project>
-      <Name>Unity.Burst.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Burst.csproj">
-      <Project>{1BB0891B-378F-0668-2EFD-98CAA2136F4A}</Project>
-      <Name>Unity.Burst</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Collections.csproj">
-      <Project>{C815C991-3428-5890-B579-F80631E3859A}</Project>
-      <Name>Unity.Collections</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Jobs.Editor.csproj">
-      <Project>{ACD733A5-A66E-100E-A6A7-32B2C483DC3C}</Project>
-      <Name>Unity.Jobs.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Jobs.csproj">
-      <Project>{9F9C774B-4B2F-869F-152C-CA1BBB3FE4C0}</Project>
-      <Name>Unity.Jobs</Name>
+    <ProjectReference Include="InspectorGadgets.csproj">
+      <Project>{EF287B1A-2681-2D91-F3CF-5D523BD42AB6}</Project>
+      <Name>InspectorGadgets</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
